--- a/Interest/Inflation.html
+++ b/Interest/Inflation.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Inflation Calculator</title>
-
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
@@ -46,9 +45,7 @@ h1{
   box-shadow:var(--shadow);
   padding:24px;
 }
-.section{
-  margin-bottom:22px;
-}
+.section{margin-bottom:22px}
 .section h3{
   margin-bottom:12px;
   color:var(--primary);
@@ -99,7 +96,10 @@ button{
   color:var(--muted);
 }
 
-.chart-box{height:280px;margin-bottom:18px}
+.chart-box{
+  height:280px;
+  margin-bottom:18px;
+}
 
 .table-wrap{
   border:1px solid var(--border);
@@ -154,18 +154,17 @@ th:first-child,td:first-child{text-align:center}
 
   <div class="section">
     <h3>Inflation Details</h3>
-
     <label>Amount</label>
-    <input id="amount" value="1000">
+    <input id="amount" type="number" value="1000">
 
     <label>Start Year</label>
-    <input id="startYear" value="2010">
+    <input id="startYear" type="number" value="2010">
 
     <label>End Year</label>
-    <input id="endYear" value="2025">
+    <input id="endYear" type="number" value="2025">
 
     <label>Annual Inflation Rate (%)</label>
-    <input id="rate" value="3">
+    <input id="rate" type="number" step="0.01" value="3">
   </div>
 
   <button class="primary" onclick="calculate()">Calculate Inflation</button>
@@ -176,22 +175,10 @@ th:first-child,td:first-child{text-align:center}
 <div class="card">
 
   <div class="results">
-    <div class="result-box">
-      <b id="futureValue">–</b>
-      <small>Future Value</small>
-    </div>
-    <div class="result-box">
-      <b id="loss">–</b>
-      <small>Purchasing Power Lost</small>
-    </div>
-    <div class="result-box">
-      <b id="percent">–</b>
-      <small>Total Inflation %</small>
-    </div>
-    <div class="result-box">
-      <b id="years">–</b>
-      <small>Years</small>
-    </div>
+    <div class="result-box"><b id="futureValue">–</b><small>Future Value</small></div>
+    <div class="result-box"><b id="loss">–</b><small>Purchasing Power Lost</small></div>
+    <div class="result-box"><b id="percent">–</b><small>Total Inflation %</small></div>
+    <div class="result-box"><b id="yearsOut">–</b><small>Years</small></div>
   </div>
 
   <div class="chart-box">
@@ -218,49 +205,52 @@ th:first-child,td:first-child{text-align:center}
 </div>
 
 <script>
-let lineChart;
+let chart;
 
-function fmt(n){
+function money(n){
   const c=document.getElementById("currency").value;
   return new Intl.NumberFormat("en-US",{style:"currency",currency:c}).format(n);
 }
 
 function calculate(){
-  const amount=+document.getElementById("amount").value;
-  const start=+document.getElementById("startYear").value;
-  const end=+document.getElementById("endYear").value;
-  const rate=+document.getElementById("rate").value/100;
+  const A=+amount.value;
+  const start=+startYear.value;
+  const end=+endYear.value;
+  const r=+rate.value/100;
 
-  if(end<=start) return alert("End year must be greater than start year");
+  if(A<=0||r<0||end<=start){
+    alert("Please enter valid values");
+    return;
+  }
 
-  let years=end-start;
-  let value=amount;
+  const years=end-start;
+  let value=A;
+
   let rows="",labels=[],data=[];
 
   for(let y=start;y<=end;y++){
     labels.push(y);
     data.push(value);
-    rows+=`<tr><td>${y}</td><td>${fmt(value)}</td></tr>`;
-    value*=1+rate;
+    rows+=`<tr><td>${y}</td><td>${money(value)}</td></tr>`;
+    value*=1+r;
   }
 
-  let future=value/(1+rate);
-  let loss=future-amount;
-  let percent=(loss/amount)*100;
+  const future=A*Math.pow(1+r,years);
+  const loss=future-A;
+  const percent=(loss/A)*100;
 
-  futureValue.textContent=fmt(future);
-  loss.textContent=fmt(loss);
+  futureValue.textContent=money(future);
+  loss.textContent=money(loss);
   percent.textContent=percent.toFixed(2)+"%";
-  years.textContent=years+" yrs";
+  yearsOut.textContent=years+" yrs";
   table.innerHTML=rows;
 
-  lineChart?.destroy();
-  lineChart=new Chart(document.getElementById("chart"),{
+  chart?.destroy();
+  chart=new Chart(document.getElementById("chart"),{
     type:"line",
     data:{
       labels,
       datasets:[{
-        label:"Inflation-Adjusted Value",
         data,
         borderColor:"#2563eb",
         backgroundColor:"rgba(37,99,235,.15)",
