--- a/Interest/Inflation.html
+++ b/Interest/Inflation.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Inflation Calculator</title>
-
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
@@ -25,21 +24,9 @@ body{
   background:var(--bg);
   color:var(--text);
 }
-h1{
-  text-align:center;
-  color:var(--primary);
-  margin:22px 0;
-}
-.container{
-  max-width:1200px;
-  margin:auto;
-  padding:16px;
-}
-.grid{
-  display:grid;
-  grid-template-columns:380px 1fr;
-  gap:28px;
-}
+h1{text-align:center;color:var(--primary);margin:22px 0}
+.container{max-width:1200px;margin:auto;padding:16px}
+.grid{display:grid;grid-template-columns:380px 1fr;gap:28px}
 .card{
   background:var(--card);
   border-radius:var(--radius);
@@ -47,31 +34,19 @@ h1{
   padding:24px;
 }
 .section{margin-bottom:22px}
-.section h3{
-  margin-bottom:12px;
-  color:var(--primary);
-  font-size:16px;
-}
-label{
-  font-size:12px;
-  color:var(--muted);
-  display:block;
-  margin-bottom:4px;
-}
+.section h3{margin-bottom:12px;color:var(--primary)}
+label{font-size:12px;color:var(--muted);display:block;margin-bottom:4px}
 input,select{
   width:100%;
   padding:11px;
   border-radius:12px;
   border:1px solid var(--border);
   font-size:14px;
-  margin-bottom:10px;
+  margin-bottom:10px
 }
 button{
-  padding:14px;
-  border:none;
-  border-radius:14px;
-  font-weight:600;
-  cursor:pointer;
+  padding:14px;border:none;border-radius:14px;
+  font-weight:600;cursor:pointer
 }
 .primary{background:var(--primary);color:#fff}
 .secondary{background:#eef2ff;margin-top:10px}
@@ -79,52 +54,27 @@ button{
 .results{
   display:grid;
   grid-template-columns:repeat(4,1fr);
-  gap:14px;
-  margin-bottom:18px;
+  gap:14px;margin-bottom:18px
 }
-.result-box{
-  background:#f8fafc;
-  border-radius:14px;
-  padding:14px;
-  text-align:center;
+.result{
+  background:#f8fafc;border-radius:14px;
+  padding:14px;text-align:center
 }
-.result-box b{
-  font-size:18px;
-  display:block;
-}
-.result-box small{
-  font-size:12px;
-  color:var(--muted);
-}
+.result b{display:block;font-size:18px}
+.result small{font-size:12px;color:var(--muted)}
 
-.chart-box{
-  height:280px;
-  margin-bottom:18px;
-}
+.chart-box{height:280px;margin-bottom:18px}
 
 .table-wrap{
   border:1px solid var(--border);
-  border-radius:14px;
-  overflow:hidden;
+  border-radius:14px;overflow:hidden
 }
-.table-body{
-  max-height:360px;
-  overflow:auto;
-}
-table{
-  width:100%;
-  border-collapse:collapse;
-  font-size:13px;
-}
-thead{
-  background:#f1f5f9;
-  position:sticky;
-  top:0;
-}
+.table-body{max-height:360px;overflow:auto}
+table{width:100%;border-collapse:collapse;font-size:13px}
+thead{background:#f1f5f9;position:sticky;top:0}
 th,td{
-  padding:8px;
-  border-bottom:1px solid var(--border);
-  text-align:right;
+  padding:8px;border-bottom:1px solid var(--border);
+  text-align:right
 }
 th:first-child,td:first-child{text-align:center}
 
@@ -156,16 +106,16 @@ th:first-child,td:first-child{text-align:center}
   <div class="section">
     <h3>Inflation Details</h3>
     <label>Amount</label>
-    <input id="amount" type="number" value="1000">
+    <input id="amount" value="1000">
 
     <label>Start Year</label>
-    <input id="startYear" type="number" value="2010">
+    <input id="startYear" value="2010">
 
     <label>End Year</label>
-    <input id="endYear" type="number" value="2025">
+    <input id="endYear" value="2025">
 
     <label>Annual Inflation Rate (%)</label>
-    <input id="rate" type="number" step="0.01" value="3">
+    <input id="rate" value="3">
   </div>
 
   <button class="primary" onclick="calculate()">Calculate Inflation</button>
@@ -176,19 +126,19 @@ th:first-child,td:first-child{text-align:center}
 <div class="card">
 
   <div class="results">
-    <div class="result-box">
+    <div class="result">
       <b id="futureValue">–</b>
       <small>Future Value</small>
     </div>
-    <div class="result-box">
+    <div class="result">
       <b id="loss">–</b>
       <small>Purchasing Power Lost</small>
     </div>
-    <div class="result-box">
+    <div class="result">
       <b id="percent">–</b>
       <small>Total Inflation %</small>
     </div>
-    <div class="result-box">
+    <div class="result">
       <b id="years">–</b>
       <small>Years</small>
     </div>
@@ -220,23 +170,23 @@ th:first-child,td:first-child{text-align:center}
 <script>
 let chart;
 
-function money(n){
+function fmt(n){
   const c=document.getElementById("currency").value;
   return new Intl.NumberFormat("en-US",{style:"currency",currency:c}).format(n);
 }
 
 function calculate(){
   const amount=+amountEl.value;
-  const start=+startYear.value;
-  const end=+endYear.value;
-  const rate=(+rateEl.value)/100;
+  const start=+startYearEl.value;
+  const end=+endYearEl.value;
+  const rate=+rateEl.value/100;
 
-  if(end<=start || amount<=0 || rate<0){
-    alert("Please enter valid values");
+  if(end<=start){
+    alert("End year must be greater than start year");
     return;
   }
 
-  const yearsCount=end-start;
+  const years=end-start;
   let value=amount;
 
   let labels=[],data=[],rows="";
@@ -244,18 +194,18 @@ function calculate(){
   for(let y=start;y<=end;y++){
     labels.push(y);
     data.push(value);
-    rows+=`<tr><td>${y}</td><td>${money(value)}</td></tr>`;
+    rows+=`<tr><td>${y}</td><td>${fmt(value)}</td></tr>`;
     value*=1+rate;
   }
 
   const future=value/(1+rate);
   const loss=future-amount;
-  const inflationPct=(loss/amount)*100;
+  const percent=((future/amount)-1)*100;
 
-  futureValue.textContent=money(future);
-  loss.textContent=money(loss);
-  percent.textContent=inflationPct.toFixed(2)+"%";
-  years.textContent=yearsCount+" yrs";
+  futureValue.textContent=fmt(future);
+  lossEl.textContent=fmt(loss);
+  percentEl.textContent=percent.toFixed(2)+"%";
+  yearsEl.textContent=years+" yrs";
   table.innerHTML=rows;
 
   chart?.destroy();
@@ -264,6 +214,7 @@ function calculate(){
     data:{
       labels,
       datasets:[{
+        label:"Inflation Adjusted Value",
         data,
         borderColor:"#2563eb",
         backgroundColor:"rgba(37,99,235,.15)",
@@ -278,10 +229,13 @@ function calculate(){
   });
 }
 
-const amountEl=document.getElementById("amount");
-const startYear=document.getElementById("startYear");
-const endYear=document.getElementById("endYear");
-const rateEl=document.getElementById("rate");
+const amountEl=amount,
+startYearEl=startYear,
+endYearEl=endYear,
+rateEl=rate,
+lossEl=loss,
+percentEl=percent,
+yearsEl=years;
 
 calculate();
 </script>
