--- a/Interest/Inflation.html
+++ b/Interest/Inflation.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Inflation Calculator v2</title>
-
+<title>Inflation Calculator</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
@@ -25,11 +24,7 @@ body{
   background:var(--bg);
   color:var(--text);
 }
-h1{
-  text-align:center;
-  color:var(--primary);
-  margin:22px 0;
-}
+h1{text-align:center;color:var(--primary);margin:22px 0}
 .container{max-width:1200px;margin:auto;padding:16px}
 .grid{display:grid;grid-template-columns:380px 1fr;gap:28px}
 .card{
@@ -38,8 +33,8 @@ h1{
   box-shadow:var(--shadow);
   padding:24px;
 }
-.section{margin-bottom:20px}
-.section h3{margin-bottom:10px;color:var(--primary)}
+.section{margin-bottom:22px}
+.section h3{margin-bottom:12px;color:var(--primary)}
 label{font-size:12px;color:var(--muted);display:block;margin-bottom:4px}
 input,select{
   width:100%;
@@ -47,63 +42,62 @@ input,select{
   border-radius:12px;
   border:1px solid var(--border);
   font-size:14px;
-  margin-bottom:10px;
+  margin-bottom:10px
 }
 button{
-  padding:14px;
-  border:none;
-  border-radius:14px;
-  font-weight:600;
-  cursor:pointer;
+  padding:14px;border:none;border-radius:14px;
+  font-weight:600;cursor:pointer
 }
 .primary{background:var(--primary);color:#fff}
 .secondary{background:#eef2ff}
-.dark{background:#0f172a;color:#fff}
+.print{background:#0f172a;color:#fff;margin-top:10px}
 
 .results{
   display:grid;
   grid-template-columns:repeat(4,1fr);
-  gap:14px;
-  margin-bottom:18px;
+  gap:14px;margin-bottom:18px
 }
 .result{
-  background:#f8fafc;
-  border-radius:14px;
-  padding:14px;
-  text-align:center;
+  background:#f8fafc;border-radius:14px;
+  padding:14px;text-align:center
 }
-.result b{font-size:18px;display:block}
+.result b{display:block;font-size:18px}
 .result small{font-size:12px;color:var(--muted)}
 
 .chart-box{height:280px;margin-bottom:18px}
 
 .table-wrap{
   border:1px solid var(--border);
-  border-radius:14px;
-  overflow:hidden;
+  border-radius:14px;overflow:hidden
 }
 .table-body{max-height:360px;overflow:auto}
 table{width:100%;border-collapse:collapse;font-size:13px}
 thead{background:#f1f5f9;position:sticky;top:0}
-th,td{padding:8px;border-bottom:1px solid var(--border);text-align:right}
+th,td{
+  padding:8px;border-bottom:1px solid var(--border);
+  text-align:right
+}
 th:first-child,td:first-child{text-align:center}
 
 @media(max-width:900px){
   .grid{grid-template-columns:1fr}
   .results{grid-template-columns:repeat(2,1fr)}
 }
+@media print{
+  button,.section select{display:none}
+  body{background:#fff}
+}
 </style>
 </head>
 
 <body>
-<h1>📈 Inflation Calculator v2</h1>
+<h1>📈 Inflation Calculator </h1>
 
 <div class="container">
 <div class="grid">
 
 <!-- LEFT -->
 <div class="card">
-
   <div class="section">
     <h3>Mode</h3>
     <select id="mode">
@@ -126,9 +120,9 @@ th:first-child,td:first-child{text-align:center}
     <h3>Inflation Preset</h3>
     <select id="preset">
       <option value="custom">Custom</option>
-      <option value="2">Low (2%)</option>
       <option value="3">US Avg (3%)</option>
-      <option value="6">High (6%)</option>
+      <option value="2">EU Avg (2%)</option>
+      <option value="4">Emerging (4%)</option>
     </select>
   </div>
 
@@ -149,18 +143,17 @@ th:first-child,td:first-child{text-align:center}
 
   <button class="primary" onclick="calculate()">Calculate</button>
   <button class="secondary" onclick="location.reload()">Reset</button>
-  <button class="dark" onclick="window.print()">🖨️ Print / Export</button>
-
+  <button class="print" onclick="window.print()">🖨️ Print / Export</button>
 </div>
 
 <!-- RIGHT -->
 <div class="card">
 
   <div class="results">
-    <div class="result"><b id="value">–</b><small>Adjusted Value</small></div>
-    <div class="result"><b id="loss">–</b><small>Purchasing Power Lost</small></div>
-    <div class="result"><b id="percent">–</b><small>Total Inflation %</small></div>
-    <div class="result"><b id="years">–</b><small>Years</small></div>
+    <div class="result"><b id="v1">–</b><small>Adjusted Value</small></div>
+    <div class="result"><b id="v2">–</b><small>Purchasing Power Lost</small></div>
+    <div class="result"><b id="v3">–</b><small>Total Inflation %</small></div>
+    <div class="result"><b id="v4">–</b><small>Years</small></div>
   </div>
 
   <div class="chart-box">
@@ -187,60 +180,63 @@ th:first-child,td:first-child{text-align:center}
 let chart;
 
 function fmt(n){
-  const c=document.getElementById("currency").value;
-  return new Intl.NumberFormat("en-US",{style:"currency",currency:c}).format(n);
+  return new Intl.NumberFormat("en-US",{
+    style:"currency",
+    currency:currency.value
+  }).format(n);
 }
 
-preset.onchange=()=>{ if(preset.value!=="custom") rate.value=preset.value; };
+preset.onchange=()=>{
+  if(preset.value!=="custom") rate.value=preset.value;
+};
 
 function calculate(){
-  const amt=+amount.value;
-  const startY=+start.value;
-  const endY=+end.value;
-  const r=+rate.value/100;
   const modeVal=mode.value;
+  const amt=+amount.value;
+  const s=+start.value;
+  const e=+end.value;
+  const r=+rate.value/100;
 
-  if(endY<=startY){ alert("End year must be greater than start year"); return; }
+  if(e<=s) return alert("End year must be greater than start year");
 
-  const yrs=endY-startY;
-  let rows="",labels=[],data=[];
-
-  let adjusted,loss,percentVal;
+  const yrs=e-s;
+  let labels=[],data=[],rows="";
+  let val=amt;
 
   if(modeVal==="forward"){
-    adjusted = amt*Math.pow(1+r,yrs);
-    loss = adjusted-amt;
-    percentVal = (adjusted/amt-1)*100;
-
-    let v=amt;
-    for(let y=startY;y<=endY;y++){
+    for(let y=s;y<=e;y++){
       labels.push(y);
-      data.push(v);
-      rows+=`<tr><td>${y}</td><td>${fmt(v)}</td></tr>`;
-      v*=1+r;
+      data.push(val);
+      rows+=`<tr><td>${y}</td><td>${fmt(val)}</td></tr>`;
+      val*=1+r;
     }
+    const future=val/(1+r);
+    const loss=future-amt;
+    const pct=((future/amt)-1)*100;
+
+    v1.textContent=fmt(future);
+    v2.textContent=fmt(loss);
+    v3.textContent=pct.toFixed(2)+"%";
   }else{
-    adjusted = amt/Math.pow(1+r,yrs);
-    loss = amt-adjusted;
-    percentVal = (amt/adjusted-1)*100;
-
-    let v=adjusted;
-    for(let y=startY;y<=endY;y++){
+    const base=amt/Math.pow(1+r,yrs);
+    for(let y=s;y<=e;y++){
       labels.push(y);
-      data.push(v);
-      rows+=`<tr><td>${y}</td><td>${fmt(v)}</td></tr>`;
-      v*=1+r;
+      data.push(base*Math.pow(1+r,y-s));
+      rows+=`<tr><td>${y}</td><td>${fmt(data.at(-1))}</td></tr>`;
     }
+    const loss=amt-base;
+    const pct=((amt/base)-1)*100;
+
+    v1.textContent=fmt(base);
+    v2.textContent=fmt(loss);
+    v3.textContent=pct.toFixed(2)+"%";
   }
 
-  value.textContent=fmt(adjusted);
-  loss.textContent=fmt(loss);
-  percent.textContent=percentVal.toFixed(2)+"%";
-  years.textContent=yrs+" yrs";
+  v4.textContent=yrs+" yrs";
   table.innerHTML=rows;
 
   chart?.destroy();
-  chart=new Chart(document.getElementById("chart"),{
+  chart=new Chart(chartCanvas,{
     type:"line",
     data:{
       labels,
@@ -252,10 +248,14 @@ function calculate(){
         tension:.35
       }]
     },
-    options:{maintainAspectRatio:false,plugins:{legend:{display:false}}}
+    options:{
+      maintainAspectRatio:false,
+      plugins:{legend:{display:false}}
+    }
   });
 }
 
+const chartCanvas=document.getElementById("chart");
 calculate();
 </script>
 </body>
